force-app/main/default/objects/Churn_Data__c/Churn_Data__c.object-meta.xml
<CustomObject>
    <label>Churn Data</label>
    <nameField>
        <label>Churn Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Churn Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>