force-app/main/default/objects/Churn_Data__c/fields/AVP_Name__c.field-meta.xml
<CustomField>
    <fullName>AVP_Name__c</fullName>
    <label>AVP Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>