force-app/main/default/objects/Churn_Data__c/fields/BM_Name__c.field-meta.xml
<CustomField>
    <fullName>BM_Name__c</fullName>
    <label>BM Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>