force-app/main/default/objects/Churn_Data__c/fields/Flag_Date__c.field-meta.xml
<CustomField>
    <fullName>Flag_Date__c</fullName>
    <label>Flag Date</label>
    <type>Date</type>
</CustomField>