force-app/main/default/objects/Churn_Data__c/fields/Primary_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep__c</fullName>
    <label>Primary Sales Rep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>