force-app/main/default/objects/Churn_Data__c/fields/Rep_Rank__c.field-meta.xml
<CustomField>
    <fullName>Rep_Rank__c</fullName>
    <label>Rep Rank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>